# A3000-Transfer

./: .gitignore  CLAUDE.md  README.md  TODO.md
docs/: mvp-plan.md  protocol-notes.md  status.md
docs/conversion/: DECISIONS.md  INVENTORY.md  MAPPING.md
docs/conversion/oracles/: README.md  generate_oracles.py
docs/conversion/oracles/golden/midi/: case_16_slices.mid  case_1_slice_16_beats.mid  case_3_slices_4_beats.mid  case_5_slices_8_beats.mid  case_zero_dur.mid  manifest.json
docs/conversion/oracles/golden/onset/: manifest.json
docs/conversion/oracles/golden/onset/impulses_4_44100/: engine_samples.json  mel.f32  mel_db.f32  onset_detect.json  onset_env.f32  onset_env_normalized.f32  peaks.json  stft_mag.f32  y.f32
docs/conversion/oracles/golden/onset/loop01/: engine_samples.json  mel.f32  mel_db.f32  onset_detect.json  onset_env.f32  onset_env_normalized.f32  peaks.json  stft_mag.f32  y.f32
docs/conversion/oracles/golden/onset/loop02/: engine_samples.json  mel.f32  mel_db.f32  onset_detect.json  onset_env.f32  onset_env_normalized.f32  peaks.json  stft_mag.f32  y.f32
docs/conversion/oracles/golden/onset/loop03/: backtracked.json  engine_samples.json  mel.f32  mel_db.f32  onset_env.f32  onset_env_normalized.f32  peaks.json  stft_mag.f32  y.f32
docs/conversion/oracles/golden/onset/reese02/: backtracked.json  engine_samples.json  mel.f32  mel_db.f32  onset_env.f32  onset_env_normalized.f32  peaks.json  y.f32
docs/conversion/oracles/golden/smdi/: abort_procedure.json  encode_begin_sample_transfer.json  encode_data_packet.json  encode_delete_sample.json  encode_sample_header.json  encode_sample_header_request.json  encode_send_next_packet.json  end_of_procedure.json  master_identify.json
docs/conversion/oracles/golden/wav/: manifest.json  sine_440_mono_24_44100.no_dither.pcm16  sine_440_mono_24_44100.pcm16  sine_440_mono_32_44100.no_dither.pcm16  sine_440_mono_32_44100.pcm16  sine_440_mono_8_44100.no_dither.pcm16  sine_440_mono_8_44100.pcm16  sine_440_stereo_16_48000.pcm16  sine_440_stereo_24_44100.no_dither.pcm16  sine_440_stereo_24_44100.pcm16  sine_440_stereo_32f_44100.no_dither.pcm16  sine_440_stereo_32f_44100.pcm16
python/: README.md  a3000_transfer.spec  build.ps1  make_icon.py  patch_scipy.py  pyproject.toml
python/a3000_transfer/: __init__.py  __main__.py  _worker.py  cli.py  gui.py  models.py  scsi_passthrough.py  smdi.py  spti.py  transfer.py  wav_reader.py
python/a3000_transfer/slicer/: __init__.py  engine.py  view.py
python/scripts/: probe_adapter_caps.py  probe_delete_sample.py  probe_inquiry.py  probe_sample_header_request.py  probe_scsi.py  probe_send_sample.py  probe_smdi_identify.py
rust/: Cargo.toml  README.md
rust/crates/a3000-app/: Cargo.toml  build.rs
rust/crates/a3000-app/examples/: scroll_repro.rs
rust/crates/a3000-app/src/: app.rs  archive.rs  audio.rs  client.rs  config.rs  ipc.rs  main.rs  ole_drag.rs  theme.rs  time_stretch.rs  worker.rs
rust/crates/a3000-app/src/tabs/: download.rs  mod.rs  slicer.rs  upload.rs
rust/crates/a3000-core/: Cargo.toml
rust/crates/a3000-core/examples/: scan_smdi.rs  transfer_wav.rs
rust/crates/a3000-core/src/: lib.rs  midi.rs  scsi.rs  smdi.rs  transfer.rs  wav.rs
rust/crates/a3000-core/tests/: oracle_midi.rs  oracle_smdi.rs  oracle_wav.rs
rust/crates/a3000-onset/: Cargo.toml
rust/crates/a3000-onset/src/: backtrack.rs  flux.rs  lib.rs  mel.rs  peak.rs  stft.rs
src/A3000Transfer.Core/Models/: ScsiTargetInfo.cs  WaveSample.cs
src/A3000Transfer.Core/Services/: IScsiTransport.cs  IWaveReader.cs  SampleTransferService.cs  WaveFileReader.cs
src/A3000Transfer.Windows/: A3000Transfer.Windows.csproj  Program.cs
src/A3000Transfer.Windows/Commands/: CommandLine.cs
src/A3000Transfer.Windows/Interop/: AspiNative.cs  AspiTypes.cs  SptiNative.cs  SptiTypes.cs
src/A3000Transfer.Windows/Scsi/: AspiScsiTransport.cs  SptiScsiTransport.cs
