[workspace]
resolver = "2"
members = [
    "crates/a3000-core",
    "crates/a3000-onset",
    "crates/a3000-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
authors = ["TiiPaa"]
license = "MIT"
repository = "https://github.com/TiiPaa/A3000-Transfer"

# Lint global : strict pour catcher les anti-patterns Python→Rust
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# pedantic désactivé : trop bruyant sur ce projet (casts de bytes BE volontaires,
# documentation détaillée pas critique pour binaire interne, etc.)
# Garde-fous opinionated maintenus en code prod (auto-désactivés dans #[cfg(test)]) :
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"

# Dependencies partagées (versions épinglées pour reproductibilité)
[workspace.dependencies]
# Audio
symphonia = { version = "0.5", default-features = false, features = ["wav", "pcm"] }
hound = "3.5"
cpal = "0.15"
# DSP
rustfft = "6.2"
ndarray = "0.15"
ndarray-stats = "0.5"
# MIDI
midly = "0.5"
# Sérialisation / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Erreurs / logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# CLI
clap = { version = "4", features = ["derive"] }
# Random (ChaCha8 pour TPDF dither rapide ; pas bit-exact vs NumPy mais
# tolérance ±1 LSB suffit pour audio — cf. DECISIONS.md)
rand = "0.8"
rand_chacha = "0.3"
# Win32
windows-core = "0.58"   # requis comme crate root pour le macro #[implement] de windows
windows = { version = "0.58", features = [
    "implement",                           # expose IXxx_Impl traits pour COM impl
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Storage_IscsiDisc",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Registry",   # ShellExecuteExW + SHELLEXECUTEINFOW gates derrière
    "Win32_System_Threading",  # TerminateProcess pour cleanup worker
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging", # SW_HIDE constants
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",  # IDataObject_Impl gate
    "Win32_System_Ole",
    "Win32_System_SystemServices",         # IDropSource_Impl gate (MODIFIERKEYS_FLAGS)
    "Win32_System_Memory",
    "Win32_System_DataExchange",
    "Win32_Graphics_Gdi",                  # IDataObject_Impl gate
] }
# Tests
tempfile = "3"

# Profile release : optimisé pour la taille finale + perf au démarrage.
# - lto=true     : link-time optimization (réduit la taille + inline cross-crate)
# - codegen-units=1 : meilleure opt globale (build plus lent, ok en CI)
# - opt-level=3  : max perf (défaut release, explicite ici)
# - strip="symbols" : retire les symboles de debug du binaire final
# - panic="abort" : pas de tables d'unwinding (réduit la taille ; nos deps OK)
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"
