[package]
name = "a3000-onset"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rustfft.workspace = true
ndarray.workspace = true
ndarray-stats.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
hound.workspace = true
serde_json.workspace = true
